<resources>
    <string name="app_name">Travelmantics</string>
    <string name="action_settings">Settings</string>
    <string name="action_new_post">New Post</string>
    <string name="save">SAVE</string>
    <string name="select_image">SELECT IMAGE</string>
    <string name="web_client_id" translatable="false">504670683974-hhrpjckfgbp7voencc7dhod3is6bgn3f.apps.googleusercontent.com</string>
    <string name="first_and_last_name">First and last name</string>
    <string name="e_mail">E-mail</string>
    <string name="password_text">Password</string>
    <string name="sign_in_with_email">Sign in with email</string>
    <string name="price">Price</string>
    <string name="title">Title</string>
    <string name="sign_in_with_google">Sign in with google</string>
    <string name="sign_up_now">Sign Up</string>
    <string name="description_label">Description</string>
    <string name="save_post">Save</string>
</resources>
