<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:layout_height="match_parent"
    android:background="#FFF">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/e_mail"
            android:layout_gravity="center_horizontal"
            android:layout_width="match_parent">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:layout_marginTop="16dp"
                android:id="@+id/edt_email" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/first_and_last_name"
            android:layout_gravity="center_horizontal"
            android:layout_width="match_parent">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:layout_marginTop="16dp"
                android:id="@+id/edt_name" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            android:layout_margin="16dp"
            app:passwordToggleTint="@color/colorPrimary"
            app:passwordToggleDrawable="@drawable/show_password_selector">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="5dp"
                android:layout_marginTop="16dp"
                android:inputType="textPassword"
                android:hint="@string/password_text"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:text="@string/save_post"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:textColor="#FFFF"
            android:layout_gravity="end"
            android:id="@+id/signUpButton"
            android:background="@color/colorAccent"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/progresslayout"
        android:layout_width="match_parent"
        android:gravity="center"
        android:visibility="gone"
        android:background="@color/colorPrimaryTrans"
        android:layout_height="match_parent">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>


</FrameLayout>